--- a/themes/mukti-xdf.css
+++ b/themes/mukti-xdf.css
@@ -78,3 +78,12 @@ li {
   font-size: 32px;
   line-height: 64px;
 }
+/* 翻页效果 */
+
+svg.bespoke-marp-slide {
+  transition: 1s;
+  top: 2rem !important;
+}
+svg.bespoke-marp-slide.bespoke-marp-active {
+  top: 0 !important;
+}
